--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Cookbook</string>
+    <string name="login_btn">Login</string>
+    <string name="registr_btn">Registration</string>
 </resources>
