--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,5 +1,12 @@
 <resources>
     <string name="app_name">Cookbook</string>
     <string name="login_btn">Вход</string>
+    <string name="login">Логин</string>
     <string name="registr_btn">Регистрация</string>
+    <string name="password">Пароль</string>
+    <string name="next">Далее</string>
+    <string name="login_guest">Зайти как гость</string>
+    <string name="name">Имя</string>
+    <string name="sign_up">Зарегистрироваться</string>
+    <string name="police">Регистрируясь, вы соглашаетесь с условиями использования программы и политики конфиденциальности.</string>
 </resources>
