--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -15,6 +15,8 @@
     <string name="police">Регистрируясь, вы соглашаетесь с условиями использования программы и политики конфиденциальности.</string>
     <string name="recept_category">Рецепты по категориям</string>
     <string name="national_kitchen">Национальные кухни</string>
+    <string name="logged">Вы зарегистрированы</string>
+    <string name="no_logged">Аккаунт уже существует</string>
 
     <!-- Recipes by Category -->
     <string name="сold_appetizern">Холодная закуска</string>
