--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -5,7 +5,7 @@
     <string name="search">Поиск</string>
     <string name="about_the_app">О программе</string>
     <string name="login_btn">Вход</string>
-    <string name="login">Логин</string>
+    <string name="login">Почта</string>
     <string name="registr_btn">Регистрация</string>
     <string name="password">Пароль</string>
     <string name="next">Далее</string>
