--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="search">Search</string>
     <string name="about_the_app">About the app</string>
     <string name="login_btn">Login</string>
-    <string name="login">Login</string>
+    <string name="login">Email</string>
     <string name="registr_btn">Registration</string>
     <string name="password">Password</string>
     <string name="next">Next</string>
