--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Cookbook</string>
+    <string name="subtitle">Delicious and detailed restaurant recipes on your phone</string>
     <string name="main">Main</string>
     <string name="favorite">Favorite</string>
     <string name="search">Search</string>
