--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Cookbook</string>
+    <string name="subtitle">Вкусные и подробные ресторанные рецепты в вашем телефоне</string>
     <string name="main">Главная</string>
     <string name="favorite">Избранное</string>
     <string name="search">Поиск</string>
